// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# Header Component should display post and settings and hidden logging buttons when logged 1`] = `
<nav class="navbar navbar-light">
  <div class="container">
    <a class="navbar-brand" href="/">conduit</a>
    <ul class="nav navbar-nav pull-xs-right">
      <li class="nav-item">
        <a class="nav-link" activeClassName="active" href="/">Home</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" href="/settings">
          <i class="ion-compose"></i>New Post</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" activeClassName="active" href="/settings">
          <i class="ion-gear-a"></i>Settings</a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`# Header Component should hidden post and settings and display logging buttons when not logged 1`] = `
<nav class="navbar navbar-light">
  <div class="container">
    <a class="navbar-brand" href="/">conduit</a>
    <ul class="nav navbar-nav pull-xs-right">
      <li class="nav-item">
        <a class="nav-link" activeClassName="active" href="/">Home</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" activeClassName="active" href="/register">Sign up</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" activeClassName="active" href="/login">Sign in</a>
      </li>
    </ul>
  </div>
</nav>
`;
